src/test/ui/parser/issues/issue-90993.stderr
error: unexpected token: `...`
  --> $DIR/issue-90993.rs:2:5
   |
LL |     ...=.
   |     ^^^
   |
help: use `..` for an exclusive range
   |
LL |     ..=.
   |     ~~
help: or `..=` for an inclusive range
   |
LL |     ..==.
   |     ~~~

error: unexpected `=` after inclusive range
  --> $DIR/issue-90993.rs:2:5
   |
LL |     ...=.
   |     ^^^^ help: use `..=` instead
   |
   = note: inclusive ranges end with a single equals sign (`..=`)

error: expected one of `-`, `;`, `}`, or path, found `.`
  --> $DIR/issue-90993.rs:2:9
   |
LL |     ...=.
   |         ^ expected one of `-`, `;`, `}`, or path

error: aborting due to 3 previous errors

